--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,26 @@ h1, h2, h3, h4, h5 {
     font-family: 'Rubik', sans-serif;
 }
 
+header {
+    margin: 40px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+header nav a {
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    margin: 0px 38px;
+}
+
+.top-img {
+    display: block;
+    margin: 0 auto;
+}
+
 p {
     line-height: 1.4;
 }
@@ -75,7 +95,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-bottom: 20px;
+    margin: 20px 0px;
     border-bottom: 1px dashed black;
 }
 
