--- a/css/index.css
+++ b/css/index.css
@@ -124,12 +124,18 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.middle-content .boxes .box #box-1 {
+    background: teal;
+}
+.middle-content .boxes .box #box-2 {
+    background: gold;
 }
 
 .bottom-content {
