--- a/css/index.css
+++ b/css/index.css
@@ -125,18 +125,44 @@ p {
     width: 12.5%;
     height: 100px;
     margin: 20px 2.5%;
+    background: black;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.middle-content .boxes .box #box-1 {
+.middle-content .boxes #box-1 {
     background: teal;
 }
-.middle-content .boxes .box #box-2 {
+.middle-content .boxes #box-2 {
     background: gold;
 }
+.middle-content .boxes #box-3 {
+    background: cadetblue;
+}
+.middle-content .boxes #box-4 {
+    background: coral;
+}
+.middle-content .boxes #box-5 {
+    background: crimson;
+}
+.middle-content .boxes #box-6 {
+    background: forestgreen;
+}
+.middle-content .boxes #box-7 {
+    background: darkorchid;
+}
+.middle-content .boxes #box-8 {
+    background: hotpink;
+}
+.middle-content .boxes #box-9 {
+    background: indigo;
+}
+.middle-content .boxes #box-10 {
+    background: dodgerblue;
+}
+
 
 .bottom-content {
     display: flex;
